fixed table overflows on mobile

--- a/stylesheets/_enp.scss
+++ b/stylesheets/_enp.scss
@@ -111,14 +111,3 @@ button:hover {
         margin-top: 0;
         opacity: 1; }
 }
-
-@media screen and (min-width: 30em) {
-    body {
-        padding: 2em;
-    }
-
-    .site-data {
-        padding: 2.6em 2em 3.6em;
-        margin-bottom: 3em;
-    }
-}
